[package]
name = "zencrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.9.0"
rpassword = "6"
ring = "0.16"
dialoguer = "0.10.0"
sha2 = "0.10.2"
hex = "0.4.3"
anyhow = "1.0"
